--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/style.css">
+
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,33 +16,49 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="container-wrapper">
+      <div class="container1">
+      <h1 id="result">Your Result</h1>
+       
+        <div class="circle">
+         <b id="circle76">76</b>
+         <p id="circle100">of 100</p>
+        </div>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+        <h2 id="great">Great</h2>
+        <p>You scored higher than 65% of the people who have taken these tests.</p>
+      </div>
+    
+      <div class="container2">
+         <h1 id="summary">Summary</h1>
+          <div class="reaction">
+            <p class="" id="red"><img src="./assets/images/icon-reaction.svg" alt="" id="icon">Reaction</p>
+            <b id="number1">80</b><b id="number2"> / 100</b>
+          </div>
+          <div class="memory">
+            <p class="" id="yellow"><img src="./assets/images/icon-memory.svg" alt="" id="icon">Memory</p>
+            <b id="number1">92</b><b id="number2"> / 100</b>
+          </div>
+          <div class="verval">
+           <p class="" id="green"><img src="./assets/images/icon-verbal.svg" alt="" id="icon">Verbal</p>
+           <b id="number1">61</b><b id="number2"> / 100</b>
+          </div>
+          <div class="visual">
+           <p class="" id="blue"><img src="./assets/images/icon-visual.svg" alt="" id="icon">Visual</p>
+           <b id="number1">72</b><b id="number2"> / 100</b>
+          </div>
+         <button class="" id="button-styling">Continue</button>
+      </div>
+    </div>
+  </main>
   
-  Summary
 
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+</footer>
 </body>
 </html>
