css for desktop

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <h2 id="great">Great</h2>
-        <p>You scored higher than 65% of the people who have taken these tests.</p>
+        <p id="text">You scored higher than 65% of the people who have taken these tests.</p>
       </div>
     
       <div class="container2">
