--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 </head>
 <body>
   <main>
+    <!--Wrapper-->
     <div class="container-wrapper">
+      <!--container1-->
       <div class="container1">
       <h1 id="result">Your Result</h1>
-       
+        <!--circle-->
         <div class="circle">
          <b id="circle76">76</b>
          <p id="circle100">of 100</p>
@@ -31,9 +33,10 @@
         <h2 id="great">Great</h2>
         <p id="text">You scored higher than 65% of the people who have taken these tests.</p>
       </div>
-    
+    <!--container2-->
       <div class="container2">
          <h1 id="summary">Summary</h1>
+         <!--color box-->
           <div class="reaction">
             <p class="" id="red"><img src="./assets/images/icon-reaction.svg" alt="" id="icon">Reaction</p>
             <b id="number1">80</b><b id="number2"> / 100</b>
@@ -50,6 +53,7 @@
            <p class="" id="blue"><img src="./assets/images/icon-visual.svg" alt="" id="icon">Visual</p>
            <b id="number1">72</b><b id="number2"> / 100</b>
           </div>
+          <!--button-->
          <button class="" id="button-styling">Continue</button>
       </div>
     </div>
